# SnowballFight

./: Cargo.toml  README.md  TODO.md  normal.yml
assets/glsl_shaders/: custom_material.frag  custom_material.vert
assets/loadout/attacks/: mortar.yml  normal.yml
assets/loadout/dashes/: normal.yml
assets/shaders/: toon_material.wgsl
src/: bezier.rs  lib.rs  materials.rs  multiplayer.rs  test.rs
src/mulitplayer/: client.rs  server.rs
src/multiplayer/: multiplayer.rs
