[package]
name = "snowball_fight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking", "wayland"] }
#bevy-inspector-egui = "*"
bevy_editor_pls = "*"

#bevy_renet = "0.0.7"

#bincode = "1.3.3"
#local-ip-address = "0.5.1"

#public-ip = "0.2.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "*"
#tokio = { version = "1.27.0", features = ["full"] }
